--- a/index.html
+++ b/index.html
@@ -22,33 +22,125 @@
 <body>
 <div class="cuboid-drag-container">
     <div class="cuboid-drop-board">
+        <div class="cuboid-drag-sun">
+            <img src="img/timg1.gif" alt="太阳公公">
+        </div>
+        <div class="cuboid-drag-log">
+            <img src="img/log.png" alt="log">
+        </div>
         <ul class="cuboid-drop-target">
             <li class="cuboid-drop-item">
-                <div class="cuboid-drag-sun">
-                    <img src="img/timg1.gif" alt="太阳公公">
-                </div>
-                <div class="cuboid-drag-log">
-                    <img src="img/log.png" alt="log">
-                </div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
             </li>
-            <li class="cuboid-drop-item"></li>
-            <li class="cuboid-drop-item"></li>
-            <li class="cuboid-drop-item"></li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <!--<li class="cuboid-drop-side"></li>-->
         </ul>
     </div>
     <div class="cuboid-drag-list">
         <ul class="cuboid-drag-station">
             <li class="cuboid-drag-item" data-drop="false">
-                <div class="cuboid-drag-bar"></div>
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
             </li>
             <li class="cuboid-drag-item" data-drop="false">
-                <div class="cuboid-drag-bar"></div>
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
             </li>
             <li class="cuboid-drag-item" data-drop="false">
-                <div class="cuboid-drag-bar"></div>
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
             </li>
             <li class="cuboid-drag-item" data-drop="false">
-                <div class="cuboid-drag-bar"></div>
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
+            </li>
+            <li class="cuboid-drag-item" data-drop="false">
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
+            </li>
+            <li class="cuboid-drag-item" data-drop="false">
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
             </li>
         </ul>
     </div>
