--- a/index.html
+++ b/index.html
@@ -144,6 +144,134 @@
             </li>
         </ul>
     </div>
+    <div class="cuboid-drag-next">
+        <img src="img/next.png" alt="下一步">
+    </div>
+</div>
+<div class="cuboid-drag-second-container">
+    <div class="cuboid-drop-board">
+        <div class="cuboid-drag-sun">
+            <img src="img/timg1.gif" alt="太阳公公">
+        </div>
+        <div class="cuboid-drag-log">
+            <img src="img/log.png" alt="log">
+        </div>
+        <ul class="cuboid-drop-target">
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <li class="cuboid-drop-item">
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+                <div class="cuboid-drop-side"></div>
+            </li>
+            <!--<li class="cuboid-drop-side"></li>-->
+        </ul>
+    </div>
+    <div class="cuboid-drag-list">
+        <ul class="cuboid-drag-station">
+            <li class="cuboid-drag-item" data-drop="false">
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
+            </li>
+            <li class="cuboid-drag-item" data-drop="false">
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
+            </li>
+            <li class="cuboid-drag-item" data-drop="false">
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
+            </li>
+            <li class="cuboid-drag-item" data-drop="false">
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
+            </li>
+            <li class="cuboid-drag-item" data-drop="false">
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
+            </li>
+            <li class="cuboid-drag-item" data-drop="false">
+                <div class="cuboid-drag-bar">
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                    <div class="cuboid-drag-side"></div>
+                </div>
+            </li>
+        </ul>
+    </div>
 </div>
 <div class="cuboid-mask-layer">
     <div class="acuboid-mask-audio">
