--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
                 <div class="cuboid-drop-side"></div>
                 <div class="cuboid-drop-side"></div>
             </li>
+            <!--<li class="cuboid-drop-side"></li>-->
+        </ul>
+        <ul class="cuboid-drop-target">
             <li class="cuboid-drop-item">
                 <div class="cuboid-drop-side"></div>
                 <div class="cuboid-drop-side"></div>
