--- a/index.html
+++ b/index.html
@@ -181,9 +181,6 @@
                 <div class="cuboid-drop-side"></div>
                 <div class="cuboid-drop-side"></div>
             </li>
-            <!--<li class="cuboid-drop-side"></li>-->
-        </ul>
-        <ul class="cuboid-drop-target">
             <li class="cuboid-drop-item">
                 <div class="cuboid-drop-side"></div>
                 <div class="cuboid-drop-side"></div>
@@ -274,6 +271,9 @@
                 </div>
             </li>
         </ul>
+        <div class="cuboid-drag-again">
+            <p>再做一次</p>
+        </div>
     </div>
 </div>
 <div class="cuboid-mask-layer">
